<resources>
    <string name="app_name">Rizzep</string>
    <string name="todo">TODO</string>
    <string name="ingredients">Ingredients</string>
    <string name="steps">Steps</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="enter_ingredients">Enter Ingredients</string>
    <string name="enter_cooking_time">Enter Cooking Time</string>
    <string name="enter_recipe_name">Enter Recipe Name</string>
    <string name="categories">Categories</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="dessert">Dessert</string>
    <string name="popular_recipes">Popular Recipes</string>
    <string name="delete_ingrdients">delete ingrdients</string>
    <string name="menu">menu</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="here_is_the_sample">Here is the Sample</string>
    <string name="demo_text_here">Demo Text here</string>
    <string name="text">text</string>
    <string name="add_recipe">Add Recipe</string>
    <string name="breakfastitle">Breakfast</string>
    <string name="lunchtitle">Lunch</string>
    <string name="dinnertitle">Dinner</string>

    <string-array name="categories">
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Dinner</item>
        <item>Dessert</item>
    </string-array>
</resources>