<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/image1"
        android:layout_width="190dp"
        android:layout_height="190dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/todo"
        android:rotation="-10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/home_assest1"/>

    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Let's cook with confidence,"
        android:layout_marginStart="20dp"
        android:textSize="28sp"
        android:layout_marginTop="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="cook with rizz! "
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="@id/tv1"
        app:layout_constraintTop_toBottomOf="@id/tv1"/>

    <ImageView
        android:id="@+id/search"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/searchbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv3"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"/>
<!--    <SearchView-->
<!--        android:id="@+id/searchBar"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="55dp"-->
<!--        android:layout_marginStart="24dp"-->
<!--        android:layout_marginEnd="24dp"-->
<!--        android:layout_marginTop="50dp"-->
<!--        android:queryHint="Search any recipe"-->
<!--        android:iconifiedByDefault="false"-->
<!--        android:searchHintIcon="@null"-->
<!--        android:paddingStart="24dp"-->
<!--        app:layout_constraintTop_toBottomOf="@id/tv1"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        tools:ignore="RtlSymmetry" />-->

    <TextView
        android:id="@+id/tv3"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:text="@string/categories"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/tv2"
        app:layout_constraintTop_toBottomOf="@id/tv2"/>

    <HorizontalScrollView
        android:id="@+id/horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv3">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="135dp"
            android:orientation="vertical"
            android:paddingEnd="20dp"
            android:paddingStart="20dp">
            <ImageView
                android:id="@+id/ivkategori1"
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:contentDescription="@string/todo"
                android:padding="10dp"
                android:layout_marginTop="15dp"
                android:src="@drawable/breakfastdua"
                android:background="@drawable/category_card_bc"/>

            <TextView
                android:id="@+id/tvKategori1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ivkategori1"
                android:layout_alignStart="@id/ivkategori1"
                android:layout_marginStart="17dp"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="-23dp"
                android:text="@string/breakfast"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/ivkategori2"
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:contentDescription="@string/todo"
                android:padding="4dp"
                android:layout_marginTop="15dp"
                android:layout_marginStart="17dp"
                android:layout_toEndOf="@id/ivkategori1"
                android:src="@drawable/lunchdua"
                android:background="@drawable/category_card_bc"/>
            <TextView
                android:id="@+id/tvKategori2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lunch"
                android:layout_below="@id/ivkategori2"
                android:layout_alignStart="@id/ivkategori2"
                android:layout_alignEnd="@id/ivkategori2"
                android:layout_marginStart="17dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="19dp"
                android:layout_marginBottom="-23dp"
                android:textColor="@color/black"/>

            <ImageView
                android:id="@+id/ivkategori3"
                android:layout_width="85dp"
                android:contentDescription="@string/todo"
                android:layout_height="85dp"
                android:padding="4dp"
                android:layout_marginTop="15dp"
                android:layout_marginStart="17dp"
                android:layout_toEndOf="@id/ivkategori2"
                android:src="@drawable/dinnerdua"
                android:background="@drawable/category_card_bc"/>
            <TextView
                android:id="@+id/tvKategori3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dinner"
                android:layout_below="@id/ivkategori3"
                android:layout_alignStart="@id/ivkategori3"
                android:layout_alignEnd="@id/ivkategori3"
                android:layout_marginStart="17dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="19dp"
                android:layout_marginBottom="-23dp"
                android:textColor="@color/black"/>

            <ImageView
                android:id="@+id/ivkategori4"
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:padding="4dp"
                android:layout_marginTop="15dp"
                android:contentDescription="@string/todo"
                android:layout_marginStart="17dp"
                android:layout_toEndOf="@id/ivkategori3"
                android:src="@drawable/dessertdua"
                android:background="@drawable/category_card_bc"/>
            <TextView
                android:id="@+id/tvKategori4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dessert"
                android:layout_below="@id/ivkategori4"
                android:layout_alignStart="@id/ivkategori4"
                android:layout_alignEnd="@id/ivkategori4"
                android:layout_marginStart="17dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="19dp"
                android:layout_marginBottom="-23dp"
                android:textColor="@color/black"/>
        </RelativeLayout>
    </HorizontalScrollView>

    <TextView
        android:layout_width="255dp"
        android:layout_height="wrap_content"
        android:id="@+id/tv4"
        android:layout_marginStart="30dp"
        android:text="@string/popular_recipes"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@id/horizontal"
        app:layout_constraintTop_toBottomOf="@id/horizontal"/>

    <TextView
        android:layout_width="255dp"
        android:layout_height="wrap_content"
        android:id="@+id/addrecipe"
        android:layout_marginEnd="10dp"
        android:text="@string/add_recipe"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toEndOf="@id/tv4"
        app:layout_constraintTop_toBottomOf="@id/horizontal"/>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_popular"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv4"
        app:layout_constraintVertical_bias="1.0"
        tools:listitem="@layout/rv_popular" />

</androidx.constraintlayout.widget.ConstraintLayout>